[gd_scene load_steps=13 format=2]

[ext_resource path="res://PantallaTitulo.gd" type="Script" id=1]
[ext_resource path="res://Interfaz/menu_salir.png" type="Texture" id=2]
[ext_resource path="res://Interfaz/menu_controles.png" type="Texture" id=3]
[ext_resource path="res://Interfaz/pantalla_titulo-animada.png" type="Texture" id=4]
[ext_resource path="res://Interfaz/menu_salir_focused.png" type="Texture" id=5]
[ext_resource path="res://Interfaz/menu_inicio.png" type="Texture" id=6]
[ext_resource path="res://Interfaz/menu_controles_focused.png" type="Texture" id=7]
[ext_resource path="res://Musica y Sonidos/MusicaInicio.ogg" type="AudioStream" id=8]
[ext_resource path="res://Interfaz/menu_inicio_focused.png" type="Texture" id=9]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 320, 180 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 320, 0, 320, 180 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="PantallaTitulo" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
playing = true
centered = false

[node name="MarginContainer" type="MarginContainer" parent="."]
visible = false
margin_right = 320.0
margin_bottom = 180.0
custom_constants/margin_top = 5
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="Container" parent="MarginContainer"]
margin_top = 5.0
margin_right = 320.0
margin_bottom = 160.0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
autoplay = true

[node name="TextureButtonInicio" type="TextureButton" parent="."]
margin_left = 208.0
margin_top = 40.0
margin_right = 308.0
margin_bottom = 57.0
texture_normal = ExtResource( 6 )
texture_focused = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButtonSalir" type="TextureButton" parent="."]
margin_left = 208.0
margin_top = 72.0
margin_right = 308.0
margin_bottom = 89.0
texture_normal = ExtResource( 2 )
texture_focused = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButtonControles" type="TextureButton" parent="."]
margin_left = 208.0
margin_top = 56.0
margin_right = 308.0
margin_bottom = 81.0
texture_normal = ExtResource( 3 )
texture_focused = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="TextureButtonInicio" to="." method="_on_TextureButtonInicio_pressed"]
[connection signal="pressed" from="TextureButtonSalir" to="." method="_on_TextureButtonSalir_pressed"]
[connection signal="pressed" from="TextureButtonControles" to="." method="_on_TextureButtonControles_pressed"]
